Fixing tool icons on mobile view also removing keybinding labels from tool icons on mobile

--- a/src/components/ToolIcon.scss
+++ b/src/components/ToolIcon.scss
@@ -132,10 +132,10 @@
   .Shape .ToolIcon__icon {
     width: 2rem;
     height: 2rem;
+  }
 
-    svg {
-      height: 0.8em;
-    }
+  .ToolIcon__keybinding {
+    visibility: hidden;
   }
 }
 
